force-app/main/default/objects/E2CP__Widespread_Issue__c/fields/E2CP__Description__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Description__c</fullName>
    <description>Description of the Widespread Issue</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>