force-app/main/default/objects/E2CP__Widespread_Issue__c/fields/E2CP__Most_Recent_Owner_Comment_Public__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Most_Recent_Owner_Comment_Public__c</fullName>
    <label>Most Recent Owner Comment - Public</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>