force-app/main/default/objects/E2CP__Widespread_Issue__c/fields/E2CP__Previous_Widespread_Issue__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Previous_Widespread_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Widespread Issue</label>
    <referenceTo>E2CP__Widespread_Issue__c</referenceTo>
    <relationshipLabel>Widespread Issues</relationshipLabel>
    <relationshipName>Subsequent_Widespread_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>