force-app/main/default/objects/E2CP__Widespread_Issue__c/fields/E2CP__Status__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Status__c</fullName>
    <description>Used to track which status a Widespread Issue is in</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Waiting on Third-Party</fullName>
            </value>
            <value>
                <fullName>Potential Solution</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
                <isActive>false</isActive>
                <label>Investigating</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>