force-app/main/default/objects/E2CP__Widespread_Issue__c/fields/E2CP__Title__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Title__c</fullName>
    <description>Title of the Widespread Issue</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>